[tool.poetry]
name = "py-near"
version = "1.1.51"
description = "Pretty simple and fully asynchronous framework for working with NEAR blockchain"
authors = ["pvolnov <petr@herewallet.app>"]
readme = "README.md"

[tool.poetry.dependencies]
base58 = "^2.1.1"
python = ">=3.8,<3.12"
httpx = ">=0.26.0"
py-near-primitives = "0.2.4"
frozenlist = "^1.4.1"
pynacl = "^1.5.0"
loguru = "^0.7.2"
pydantic = "^2.6.2"

[tool.poetry.group.dev.dependencies]
black = "^21.12b0"
mypy = "^0.930"
pytest = ">=7.0,<8.0"
flake8 = "^4.0.1"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
pytest-asyncio = "^0.23.5"

[project]
name = "py-near"
version = "1.1.51"
description = "Pretty simple and fully asynchronous framework for working with NEAR blockchain"
authors = [{ name = "pvolnov", email = "petr@herewallet.app" }]
license = { file = "LICENSE" }

keywords = ["python", "near", "async"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/pvolnov/py-near"
documentation = "https://py-near.readthedocs.io/en/latest"
repository = "https://github.com/pvolnov/py-near"
changelog = "https://github.com/pvolnov/py-near/blob/main/CHANGELOG.md"
funding = "https://opencollective.com/py-near"
twitter = "https://twitter.com/p_volnov"

[tool.pytest.ini_options]
addopts = "--capture=no --tb=native"
testpaths = ["tests"]
asyncio_mode = "auto"
